<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Journal IBS</string>
    <string name="db_name">meals_diary</string>
    
    <string name="title_meal_list">Journal des repas</string>
    <string name="title_meal_detail">Détails du repas</string>
    <string name="title_charts">Graphiques</string>
    <string name="title_discomfort_chart">Ce qui pose problème...</string>
    
    <string name="choose_date">Choisir la date</string>
    <string name="choose_time">Choisir l\'heure</string>
    <string name="choose_location">Choisir le lieu</string>
    
    <string name="location_pending" tools:ignore="TypographyEllipsis">Localisation en cours...</string>
    <string name="location_prefix">Près de </string>

    <string name="action_add">Ajouter</string>
    <string name="action_edit">Modifier</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_context_sel">sélectionné(s)</string>
    <string name="action_show_charts">Indices</string>
    <string name="action_done">Confirmer</string>
    <string name="action_done_empty">Veuillez ajouter au moins un ingrédient</string>
    <string name="action_reset_meals">Supprimer les repas</string>
    <string name="action_reset_meals_desc">Voulez-vous vraiment supprimer tout les repas?</string>
    <string name="action_reset_meals_yes">Oui</string>
    <string name="action_reset_meals_no">Non</string>
    <string name="action_reset_all">Supprimer tout</string>
    <string name="action_reset_all_desc">Voulez-vous vraiment supprimer tout les ingrédients ainsi que les repas?</string>
    <string name="action_reset_all_yes">Oui</string>
    <string name="action_reset_all_no">Non</string>
    <string name="action_backup">Sauvegarder</string>
    <string name="action_restore">Restaurer</string>
    <string name="action_help">Aide</string>
    <string name="action_help_body">Cette application permet, au travers d\'une 
        journalisation quotidienne de tous les repas, de mettre en évidence les 
        aliments qui provoquent des complications digestives.\n\n
        Créé par Romain Maffina
        </string>
    
    <string name="ingredient_search_hint">Ajouter un ingrédient</string>
    <string name="ingredient_added_postfix">ajouté</string>
    <string name="ingredient_created_postfix">créé et ajouté</string>
    
    
    <string name="symptom_nausea">Nausées</string>
    <string name="symptom_colic">Coliques</string>
    <string name="symptom_diarrhea">Diarrhées</string>
    

</resources>
