<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="50" >
        
	    <AutoCompleteTextView
	        android:id="@+id/searchIngredient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="4dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:layout_marginTop="4dp"
	        android:ems="10"
	        android:gravity="center_vertical|center_horizontal"
	        android:hint="@string/ingredient_search_hint"
	        android:inputType="text" />

	    <View
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:layout_margin="8dp"
	        android:background="@android:color/darker_gray" />
	
	    <ListView
	        android:id="@+id/listIngredients"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_marginBottom="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:layout_marginTop="4dp" >
	    </ListView>
    
    </LinearLayout>
    
    <View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:layout_margin="8dp"
		android:background="@android:color/darker_gray"/>
        
    <Switch
        android:id="@+id/switchNausea"
        style="android:switchStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/symptom_nausea" />
    
    <Switch
        android:id="@+id/switchColic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/symptom_colic" />
    
    <Switch
        android:id="@+id/switchDiarrhea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/symptom_diarrhea" />
    
   	<View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="?android:attr/dividerVertical"/>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/datePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/choose_date" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerVertical"/>
        
        <Button
            android:id="@+id/timePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/choose_time" />

    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="?android:attr/dividerVertical"/>
    
    <Button
        android:id="@+id/locationPicker"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/choose_location" />
    
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="?android:attr/dividerVertical"/>
    
    

</LinearLayout>